Changed Saved search strategy

--- a/Download/Views/Account/Manage.cshtml
+++ b/Download/Views/Account/Manage.cshtml
@@ -9,7 +9,7 @@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success" style="background-color: rgba(255, 255, 255, 0.40)">@ViewBag.StatusMessage</p>
-<div class="row" style="background-color: rgba(255, 255, 255, 0.25); border: 2px solid rgb(81, 70, 176)">
+<div class="row" style="background-color: rgba(255, 255, 255, 0.25); border: 2px solid #ffffff">
     <div class="col-md-12">
         @if (ViewBag.HasLocalPassword)
         {
