--- a/Download/Views/Product/Index.cshtml
+++ b/Download/Views/Product/Index.cshtml
@@ -17,18 +17,18 @@
     }
     else if (User.IsInRole("non-validated memeber"))
     {
-           <div class="body-content; text-muted" style="font-size: 20px">
+           <div class="body-content text-muted" style="font-size: 20px">
         Your account is currently in the process of being verified.
     </div> 
     }
     else { 
-    <div class="body-content; text-muted" style="font-size: 20px">
+    <div class="body-content text-muted" style="font-size: 20px">
         Log in and get verified to gain access to
         even more awesome downloadable stuff!
     </div>
     }
     <br />
-    <div class="body-content; text-muted" style="font-size: 20px">
+    <div class="body-content text-muted" style="font-size: 20px">
         Use the search to find the product you want, or
         do a blank search to browse through all available
         products
