--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -4,65 +4,65 @@
 @{
     ViewBag.Title = "Create";
     var per = (IEnumerable<SelectListItem>)ViewData["permissions"];
-
+    var search = ViewData["search"];
+    var pageNum = ViewData["page"];
 
 }
 
 <h2>Create Product</h2>
 
-<div style="background-color: rgba(255, 255, 255, 0.23)">
-    @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
+<div style="background-color: rgba(255, 255, 255, 0.23); border: 2px solid #ffffff" class="clearfix form-horizontal">
+    @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data", searchString = search, page = pageNum }))
     {
         @Html.AntiForgeryToken()
 
-
-
-            <hr />
-            @Html.ValidationSummary(true)
-
-            <div class="form-group">
-                @Html.Label("Product Name", new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ProductName)
-                    @Html.ValidationMessageFor(model => model.ProductName)<br /><br />
-                </div>
-            </div>
+        <hr />
+        @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.Label("","Select a .exe" , new  { @class = "control-label col-md-2"})
-            <fieldset>
-                <div class=" col-md-10">
+            @Html.Label("Product Name", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <p>
+                    @Html.EditorFor(model => model.ProductName)
+                    @Html.ValidationMessageFor(model => model.ProductName)
+                </p>
 
-                    <p>
-                    <input type="file" name="FileUpload1" />
-                    </p>
-                </div>
-            </fieldset>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("", "Select a .exe", new { @class = "control-label col-md-2" })
+            <div class=" col-md-10">
+
+
+                <input type="file" name="FileUpload1" />
+
+            </div>
+
         </div>
 
         <div class="form-group">
             @Html.Label("Select an Installer", new { @class = "control-label col-md-2" })
-            <fieldset>
-                <div class=" col-md-10">
 
-                    <p>
-                       <input type="file" name="FileUpload2" />
-                    </p>
-                </div>
-            </fieldset>
+            <div class=" col-md-10">
+
+                <input type="file" name="FileUpload2" />
+
+            </div>
+
 
         </div>
 
         <div class="form-group">
             @Html.Label("Select a ReadMe", new { @class = "control-label col-md-2" })
-            <fieldset>
-                <div class=" col-md-10">
 
-                    <p>
-                       <input type="file" name="FileUpload3" />
-                    </p>
-                </div>
-            </fieldset>
+            <div class=" col-md-10">
+
+
+                <input type="file" name="FileUpload3" />
+
+            </div>
+
         </div>
         <div class="form-group">
             @Html.Label("Version Permissions", new { @class = "control-label col-md-2" })
@@ -74,17 +74,18 @@
 
 
         <div class="form-group">
+
             <div class="col-md-offset-2 col-md-10">
-                <br />
-                <input type="submit" value="Create" class="btn btn-default" /><br />
+                <input type="submit" value="Create" class="btn btn-default" />
 
             </div>
-           <hr />
 
         </div>
-                     @Html.ActionLink("Back to List", "Index") <br />
+
     }
-    </div>
+    @Html.ActionLink("Back to List", "Index", new { searchString = search, page = pageNum })
+</div>
+
 
 @*Another Default thing*@
 
