--- a/Download/Views/Product/Edit.cshtml
+++ b/Download/Views/Product/Edit.cshtml
@@ -3,16 +3,17 @@
 @{
     ViewBag.Title = "Edit";
     var search = ViewData["search"];
+    var pageNum = ViewData["page"];
 
 }
 
-<h2>Edit</h2>
+<h2 style="font-family: Arial">Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(new { searchString = search, page = pageNum }))
 {
     @Html.AntiForgeryToken()
-    <div class="form-horizontal" style="background-color: #ffffff; border: 2px solid #4f51d0; ">
+    <div class="form-horizontal" style="background-color: rgba(255, 255, 255, 0.26); border: 2px solid #ffffff; ">
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.ProductId)
@@ -25,17 +26,17 @@
                 @Html.ValidationMessageFor(model => model.ProductName)
             </div>
         </div>
-        <table style="background-color: rgba(182, 255, 0, 0.25);" class="table table-hover">
+        <table style="background-color: rgba(255, 255, 255, 0.50);" class="table table-hover">
 
             <tr>
                 <th>
                     @Html.Encode("Version")
                 </th>
                 <th>
-                    @Html.Encode("Installer")
+                    @Html.Encode(".exe")
                 </th>
                 <th>
-                    @Html.Encode(".exe")
+                    @Html.Encode("Installer")
                 </th>
                 <th>
                     @Html.Encode("ReadMe")
@@ -47,29 +48,29 @@
 @foreach (var version in Model.Versions)
 {
 
-                 <tr> 
-                     <td>  
-                     @version.VersionName
-                     </td>        
-                @foreach (var arch in version.Archives)
-                {
-                    <td>
-                        @arch.Installer
-                    </td>
-                    <td>
-                        @arch.Exe
-                    </td>
-                    <td>
-                        @arch.ReadMe
-                    </td>
-                }
-                <td>
-                    @Html.ActionLink("Edit", "EditVersion", new { id = version.VersionId }) |
-                    @Html.ActionLink("Remove", "RemoveVersion", new { id = version.VersionId })
-                </td>
-                </tr>
-                    
-                }
+    <tr style="border: 2px solid #ffffff">
+        <td>
+            @version.VersionName
+        </td>
+        @foreach (var arch in version.Archives)
+        {
+            <td>
+                @arch.Exe
+            </td>
+            <td>
+                @arch.Installer
+            </td>
+            <td>
+                @arch.ReadMe
+            </td>
+        }
+        <td>
+            @Html.ActionLink("Edit", "EditVersion", new { id = version.VersionId }) |
+            @Html.ActionLink("Remove", "RemoveVersion", new { id = version.VersionId })
+        </td>
+    </tr>
+
+}
 
         </table>
         <div class="col-md-2">
@@ -85,7 +86,7 @@
 }
 
 <div >
-    <p class="tab">@Html.ActionLink("Back to List", "Index")</p>
+    <p class="tab">@Html.ActionLink("Back to List", "Index", new { searchString = search, page = pageNum })</p>
 </div>
 
 @section Scripts {
