--- a/Download/Views/Product/Remove.cshtml
+++ b/Download/Views/Product/Remove.cshtml
@@ -3,10 +3,7 @@
 @{
     ViewBag.Title = "Remove";
     var search = ViewData["search"];
-    if (search == null)
-    {
-        search = " ";
-    }
+    var pageNum = ViewData["page"];
 }
 <h2>Remove</h2>
 <div style="background-color: rgba(255, 255, 255, 0.30)">
@@ -15,13 +12,13 @@
     <h4>This will NOT perminately delete the item from the database, it will only make the item invisible to all users. In order to restore a removed item, you must manually
      go into the database and change the status column</h4>
 
-    @using (Html.BeginForm("Remove", "Product", new { searchString = search }))
+    @using (Html.BeginForm("Remove", "Product", new { searchString = search, page = pageNum }))
     {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Remove" class="btn btn-danger" /> |
-            @Html.ActionLink("Back to List", "Index", new { searchString = search })
+            @Html.ActionLink("Back to List", "Index", new { searchString = search, page = pageNum })
         </div>
     }
 </div>
