--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -64,6 +64,16 @@
             </div>
 
         </div>
+                <div class="form-group">
+            @Html.Label("Extra Files If needed", new { @class = "control-label col-md-2" })
+
+            <div class=" col-md-10">
+
+                <input type="file" name="FileUpload4" id="FileUpload4" multiple="multiple" />
+
+            </div>
+
+        </div>
         <div class="form-group">
             @Html.Label("Version Permissions", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
