Added Extra files and description to Create, Working on add the rest of the funcionality

--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -69,7 +69,7 @@
 
             <div class=" col-md-10">
 
-                <input type="file" name="FileUpload4" id="FileUpload4" multiple="multiple" />
+                <input type="file" name="FileUpload4" id="FileUpload4" multiple="multiple" /> (Descriptions to these files can be added after you press the create button)
 
             </div>
 
