--- a/Download/Views/Product/EditVersion.cshtml
+++ b/Download/Views/Product/EditVersion.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "EditVersion";
     var per = (IEnumerable<SelectListItem>)ViewData["permissions"];
+    int i = 0;
 }
 
 <h2>Edit Version</h2>
@@ -69,18 +70,41 @@
                     @if (arch.ReadMe != null)
                     {
                     <p>
-                       <b>(currently) @arch.ReadMe</b> <input type="file" name="FileUpload2" />
+                       <b>(currently) @arch.ReadMe</b> <input type="file" name="FileUpload3" />
                     </p>
                     }
                     else
                     {
                      <p>
-                          <b>Select a ReadMe:</b> <input type="file" name="FileUpload2" />
+                          <b>Select a ReadMe:</b> <input type="file" name="FileUpload3" />
                     </p>
                     }
                 </div>
             </fieldset>
         </div>
+    }
+        foreach (var ex in Model.ExtraFiles) { 
+        <div class="form-group">
+            <fieldset>
+                <div>
+                    <p>
+                        <b>(currently) @ex.FileName</b> <input type="file" name="FileUpload4" />
+                        @Html.TextArea("Description[" + i.ToString() + "]", ex.FileDescription, new { @style = "width: 300px; height: 75px" })
+                    </p>
+                </div>
+            </fieldset>
+        </div>
+    }
+    <div class="form-group">
+            <fieldset>
+                <div>
+                    <p>
+                        <b>Add more Extra Files</b> <input type="file" name="FileUpload5" multiple="multiple"/>
+                    </p>
+                </div>
+            </fieldset>
+        </div>
+        
                 <div class="form-group">
             @Html.Label("Version Permission", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -88,7 +112,7 @@
                 @Html.ValidationMessageFor(model => model.VersionStatus)<br /><br />
             </div>
         </div>
-        }
+        
 
 
         <div class="form-group">
