--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -12,7 +12,7 @@
 <h2>Create Product</h2>
 
 <div style="background-color: rgba(255, 255, 255, 0.23); border: 2px solid #ffffff" class="clearfix form-horizontal">
-    @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data", searchString = search, page = pageNum }))
+    @using (Html.BeginForm("Create", "Product", new { searchString = search, page = pageNum }, FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
